# serai

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/actions/build-dependencies/: action.yml
.github/actions/test-dependencies/: action.yml
.github/workflows/: coins-tests.yml
coins/grin/: README.md
coins/monero/: Cargo.toml
coins/monero/generators/: Cargo.toml
coins/monero/generators/src/: hash_to_point.rs  lib.rs  varint.rs
coins/monero/src/: block.rs  lib.rs  serialize.rs  transaction.rs
coins/monero/src/ringct/: mod.rs
coins/monero/src/ringct/bulletproofs/: core.rs  mod.rs  original.rs  plus.rs  scalar_vector.rs
coins/monero/src/ringct/clsag/: mod.rs  multisig.rs
coins/monero/src/tests/: clsag.rs
coins/monero/src/wallet/: address.rs  decoys.rs  extra.rs  mod.rs  scan.rs
coins/monero/src/wallet/seed/: classic.rs  mod.rs
coins/monero/src/wallet/seed/classic/: ang.json  de.json  en.json  eo.json  es.json  fr.json  it.json  ja.json  jbo.json  nl.json  pt.json  ru.json  zh.json
coins/monero/src/wallet/send/: builder.rs  mod.rs  multisig.rs
coins/xhv/: Cargo.toml  README.md
coins/xhv/src/: lib.rs  transaction.rs
coins/xhv/src/ringct/: mod.rs
coins/xhv/src/wallet/: decoys.rs
coins/xhv/src/wallet/send/: mod.rs  multisig.rs
common/message-box/: Cargo.toml
common/nostd-io/: Cargo.toml
common/nostd-io/src/: lib.rs  shims.rs
common/nostd_io/: README.md
crypto/bulletproof25519/: Cargo.toml  README.md
crypto/bulletproof25519/src/: field.rs  point.rs
crypto/bulletproofs/: Cargo.toml  README.md
crypto/bulletproofs/src/: core.rs  lib.rs  scalar_vector.rs
crypto/bulletproofs/tests/: range.rs
crypto/ciphersuite/: Cargo.toml
crypto/dalek-ff-group/: Cargo.toml
crypto/dalek-ff-group/src/: field.rs  lib.rs
crypto/dkg/src/: encryption.rs  frost.rs  lib.rs  promote.rs
crypto/dkg/src/resharing/: common.rs  mod.rs  reshared.rs  resharer.rs
crypto/dkg/src/tests/: mod.rs  resharing.rs
crypto/ed448/: Cargo.toml
crypto/ed448/src/: point.rs
crypto/membership/: Cargo.toml
crypto/membership/src/: ecc.rs  lib.rs  math.rs
crypto/membership/src/tests/: ecc.rs  math.rs  mod.rs
crypto/multiexp/: Cargo.toml
crypto/multiexp/src/: batch.rs  lib.rs  straus.rs
crypto/proof25519/: Cargo.toml  README.md
crypto/proof25519/src/: backend.rs  point.rs  scalar.rs
crypto/tony-proof/: Cargo.toml  README.md
crypto/tony-proof/src/: ecc.rs  lib.rs  math.rs
crypto/tony-proof/src/tests/: ecc.rs  math.rs
crypto/transcript/: Cargo.toml
docs/: Economics.md
hrf/: Cargo.toml  cbindgen.toml  header.h
hrf/src/: key_gen.rs  lib.rs  resharing.rs  sign.rs
substrate/consensus/src/tendermint/: mod.rs
tests/no-std/: Cargo.toml
