[workspace]
members = [
  "crypto/dalek-ff-group",
  "crypto/proof25519",

  "crypto/bulletproofs",
  "crypto/tony-proof",

  "coins/monero/generators",
  "coins/monero",
]

# Always compile Monero (and a variety of dependencies) with optimizations due
# to the unoptimized performance of Bulletproofs
[profile.dev.package]
subtle = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }

ff = { opt-level = 3 }
group = { opt-level = 3 }

crypto-bigint = { opt-level = 3 }
dalek-ff-group = { opt-level = 3 }
minimal-proof25519 = { opt-level = 3 }

multiexp = { opt-level = 3 }

bulletproofs = { opt-level = 3 }
tony-proof = { opt-level = 3 }

monero-serai = { opt-level = 3 }

[patch.crates-io]
dalek-ff-group = { path = "crypto/dalek-ff-group" }
