[workspace]
resolver = "2"
members = [
  "common/std-shims",
  "common/zalloc",
  "common/db",

  "crypto/transcript",

  "crypto/ff-group-tests",
  "crypto/dalek-ff-group",
  "crypto/ed448",
  "crypto/ciphersuite",

  "crypto/multiexp",

  "crypto/schnorr",
  "crypto/dleq",
  "crypto/dkg",
  "crypto/frost",
  "crypto/schnorrkel",

  "coins/bitcoin",

  "hrf",

  "tests/no-std",
]

# Always compile Monero (and a variety of dependencies) with optimizations due
# to the extensive operations required for Bulletproofs
[profile.dev.package]
subtle = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }

ff = { opt-level = 3 }
group = { opt-level = 3 }

crypto-bigint = { opt-level = 3 }
dalek-ff-group = { opt-level = 3 }
minimal-ed448 = { opt-level = 3 }

multiexp = { opt-level = 3 }

[profile.release]
panic = "unwind"
