[package]
name = "monero-serai"
version = "0.1.4-alpha"
description = "A modern Monero transaction library"
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/coins/monero"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
spin = "0.9"
lazy_static = { version = "1", features = ["spin_no_std"] }

nostd-io = { path = "../../common/nostd-io", default-features = false }

hashbrown = "0.13"

rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand_chacha = { version = "0.3", default-features = false }
rand = { version = "0.8", default-features = false, features = ["alloc"] }

zeroize = { version = "^1.5", features = ["zeroize_derive"] }
subtle = { version = "^2.4", default-features = false }

crc = { version = "3", default-features = false }
sha3 = { version = "0.10", default-features = false }

curve25519-dalek = { version = "^3.2", default-features = false, features = ["alloc", "u32_backend"] }

group = { version = "0.13", default-features = false, features = ["alloc"] }
dalek-ff-group = { path = "../../crypto/dalek-ff-group", version = "0.3" }
multiexp = { path = "../../crypto/multiexp", version = "0.3", features = ["batch"] }

transcript = { package = "flexible-transcript", path = "../../crypto/transcript", version = "0.3", features = ["recommended"], optional = true }
# frost = { package = "modular-frost", path = "../../crypto/frost", version = "0.7", features = ["ed25519"], optional = true }
# dleq = { path = "../../crypto/dleq", version = "0.3", features = ["serialize"], optional = true }

monero-generators = { path = "generators", version = "0.3" }

hex = { version = "0.4", default-features = false }

base58-monero = { version = "1", git = "https://github.com/monero-rs/base58-monero", rev = "5045e8d2b817b3b6c1190661f504e879bc769c29" }

[build-dependencies]
dalek-ff-group = { path = "../../crypto/dalek-ff-group", version = "0.3" }
monero-generators = { path = "generators", version = "0.3" }

[features]
std = []
default = ["std"]
#multisig = ["transcript", "frost", "dleq"]
