[package]
name = "haven-serai"
version = "0.1.0"
description = "A modern Haven transaction library"
license = "MIT"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
edition = "2021"

[dependencies]
hex-literal = "0.3"
lazy_static = "1"
thiserror = "1"

rand_core = "0.6"
rand_chacha = { version = "0.3", optional = true }
rand = "0.8"
rand_distr = "0.4"

zeroize = { version = "1.3", features = ["zeroize_derive"] }
subtle = "2.4"

blake2 = { version = "0.10", optional = true }

curve25519-dalek = { version = "3", features = ["std"] }

group = { version = "0.12" }
dalek-ff-group = { path = "../../crypto/dalek-ff-group" }
multiexp = { path = "../../crypto/multiexp", features = ["batch"] }

transcript = { package = "flexible-transcript", path = "../../crypto/transcript", features = ["recommended"], optional = true }
frost = { package = "modular-frost", path = "../../crypto/frost", features = ["ed25519"], optional = true }
dleq = { path = "../../crypto/dleq", features = ["serialize"], optional = true }

monero-generators = { path = "../monero/generators" }
monero-serai = { path = "../monero" }

hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

base58-monero = "1"
monero-epee-bin-serde = "1.0"

reqwest = { version = "0.11", features = ["json"] }

[features]
multisig = ["rand_chacha", "blake2", "transcript", "frost", "dleq"]

[build-dependencies]
dalek-ff-group = { path = "../../crypto/dalek-ff-group" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
