[package]
name = "bulletproof25519"
version = "0.1.0"
description = "Unaudited, inefficient implementation of bulletproof25519 in Rust"
license = "MIT"
repository = "https://github.com/kayabaNerve/serai"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["ed448", "ff", "group"]
edition = "2021"

[dependencies]
lazy_static = "1"

rand_core = "0.6"
digest = "0.10"

zeroize = { version = "1.5", features = ["zeroize_derive"] }
subtle = "2.4"

ff = "0.12"
group = "0.12"

generic-array = "0.14"
crypto-bigint = { version = "0.4", features = ["zeroize"] }

dalek-ff-group = { path = "../dalek-ff-group", version = "^0.1.2" }

[dev-dependencies]
hex-literal = "0.3"
hex = "0.4"
