[package]
name = "bulletproofs"
version = "0.1.0"
description = "Bulletproofs implementation in Rust"
license = "MIT"
repository = "https://github.com/serai-dex/serai"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["ed25519", "bulletproofs", "snark", "ff", "group"]
edition = "2021"

[dependencies]
lazy_static = "1"

rand_core = "0.6"
digest = "0.10"

zeroize = { version = "1.3", features = ["zeroize_derive"] }
subtle = "2.4"

generic-array = "0.14"
blake2 = "0.10"

ff = "0.12"
group = "0.12"

multiexp = { path = "../multiexp", version = "0.2", features = ["batch"] }

minimal-proof25519 = { path = "../proof25519", version = "0.1" }
