[package]
name = "tony-proof"
version = "0.1.0"
description = "WIP arithmetic-circuit-based membership proof for Seraphis"
license = "MIT"
repository = "https://github.com/serai-dex/serai"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["zk", "snark", "seraphis", "membership"]
edition = "2021"
publish = false

[dependencies]
lazy_static = "1"

rand_core = "0.6"
digest = "0.10"

zeroize = { version = "1.3", features = ["zeroize_derive"] }
subtle = "2.4"

ff = "0.12"
group = "0.12"

bellman = "0.13"

dalek-ff-group = { path = "../dalek-ff-group", version = "^0.1.2" }
minimal-proof25519 = { path = "../proof25519", version = "^0.1.0" }
