[package]
name = "multiexp"
version = "0.3.1"
description = "Multiexponentation algorithms for ff/group"
license = "MIT"
repository = "https://github.com/serai-dex/serai/tree/develop/crypto/multiexp"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["multiexp", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rustversion = "1"

zeroize = { version = "^1.5", features = ["zeroize_derive"] }

ff = { version = "0.13", default-features = false, features = ["alloc", "bits"] }
group = { version = "0.13", default-features = false, features = ["alloc"] }

rand_core = { version = "0.6", default-features = false, features = ["alloc"], optional = true }

[features]
batch = ["rand_core"]
